# CMakeDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jacky/jsoncppdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_a_hello_test.cpp  native_hello.cpp  native_so_hello_test.cpp  native_so_jsoncpp_test.cpp
app/src/main/java/com/jacky/jsoncppdemo/: MainActivity.kt
app/src/main/java/com/jacky/jsoncppdemo/jni/: NativeHelloALib.java  NativeHelloSoLib.java  NativeJsonSoLib.java  NativeLib.java
app/src/main/java/com/jacky/jsoncppdemo/module/: People.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/jacky/jsoncppdemo/: ExampleUnitTest.kt
export/libahello/include/: ahello.h
gradle/wrapper/: gradle-wrapper.properties
libasimple/: build.gradle
libasimple/src/androidTest/java/com/jacky/libasimple/: ExampleInstrumentedTest.java
libasimple/src/main/: AndroidManifest.xml
libasimple/src/main/cpp/hello/: CMakeLists.txt
libasimple/src/main/cpp/hello/src/: sohello.cpp
libasimple/src/test/java/com/jacky/libasimple/: ExampleUnitTest.java
libsojsoncpp/: build.gradle
libsojsoncpp/src/androidTest/java/com/jacky/libsojsoncpp/: ExampleInstrumentedTest.java
libsojsoncpp/src/main/: AndroidManifest.xml
libsojsoncpp/src/main/cpp/: CMakeLists.txt
libsojsoncpp/src/main/cpp/jsoncpp/: CMakeLists.txt
libsojsoncpp/src/test/java/com/jacky/libsojsoncpp/: ExampleUnitTest.java
libsosimple/: build.gradle
libsosimple/src/androidTest/java/com/jacky/libsosimple/: ExampleInstrumentedTest.java
libsosimple/src/main/: AndroidManifest.xml
libsosimple/src/main/cpp/: CMakeLists.txt
libsosimple/src/main/cpp/hello/: CMakeLists.txt
libsosimple/src/main/cpp/hello/src/: sohello.cpp
libsosimple/src/test/java/com/jacky/libsosimple/: ExampleUnitTest.java
